# MiMi

./: .gitignore  CHANGELOG.md  FIXES.md  LICENSE  README.md  database.py  flask_mimi_app.py  index.html  install.sh  mimi_app.py  mimi_cli.py  models.py  multi_step_simulation.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simple_mimi_app.py  test_agent_log.py  test_imports.py  tkinter_mimi_app.py  verify_changes.py
.dev/: pyvenv.cfg
Software/: .current_project  agent.log.md
database-service/: README.md  SETUP.md  docker-compose.yml
database-service/app/: .dockerignore  crud.py  database.py  import_sample_data.py  main.py  models.py  requirements.txt  schemas.py  test_project.yaml
database-service/db/init/: 01-schema.sql
docs/: agent_logging.md  agent_migration_plan.md  error_recovery.md  filename_handling.md  rich_visualizations.md
examples/: rich_demo.py  run_project_yaml.py  run_sample_project.py  run_sample_project_minimal_logging.py  subtasks_example.py
mimi/: __init__.py  __main__.py
mimi/core/: __init__.py  agent.py  project.py  runner.py  software_agents.py  task.py
mimi/core/agents/: __init__.py  analyst_agent.py  architect_agent.py  base_agent.py  (+11 more)
mimi/models/: __init__.py  ollama.py
mimi/utils/: __init__.py  config.py  directory.py  logger.py  output_manager.py
projects/advanced/: project.yaml
tests/: __init__.py  test_agent.py  test_agent_logging.py  test_logging_fix.py  test_project.py  test_qa_engineer_agent.py  test_reviewer_agent.py  test_runner.py  test_subtasks.py  test_task.py  test_verification_agents.py
(+4 files in other folders)
